[package]
name = "journaldriver"
version = "1.1.0"
authors = ["Vincent Ambo <mail@tazj.in>"]
license = "GPL-3.0-or-later"

[dependencies]
chrono = { version = "0.4.37", features = [ "serde" ]}
env_logger = "0.11.3"
failure = "0.1.8"
lazy_static = "1.4.0"
log = "0.4.21"
medallion = "2.5.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.115"
systemd = "0.10.0"
ureq = { version = "2.9.6", features = [ "json" ]}

[build-dependencies]
pkg-config = "0.3"
